--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico" media="screen">
+  <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" media="screen">
   <title>vue-note</title>
 </head>
 
